# FemtoNet

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
dvcs_cross_section/: LICENSE  Makefile  README.md  __init__.py  arch_search.py  baselines.py  elastics.py  errors.py  graphtrace.py  model.py  requirements.txt  setup.py  train.py  utils.py
dvcs_cross_section/data/defurne_34/: data_1.csv  data_13.csv  data_14.csv  data_15.csv  data_16.csv  data_17.csv  data_18.csv  data_19.csv  data_2.csv  data_23.csv  data_25.csv  data_27.csv  data_29.csv  data_3.csv  data_32.csv  data_33.csv  data_36.csv  data_38.csv  data_39.csv
dvcs_cross_section/data/defurne_35/: data_1.csv  data_12.csv  data_14.csv  data_15.csv  data_16.csv  data_18.csv  data_2.csv  data_20.csv  data_22.csv  data_24.csv  data_28.csv  data_3.csv  data_30.csv  data_31.csv  data_32.csv  data_33.csv  data_34.csv  (+10 more)
dvcs_cross_section/dvcs_xsx/: arch_search.py  cross_section.py  four_vector.py
dvcs_cross_section/plotting/: __init__.py  xsx_vs_xi.py
dvcs_cross_section/predict/: __init__.py  predict_on_dataset.py
femtonet/: .pre-commit-config.yaml  __init__.py
femtonet/api/: femtoapi.py
femtonet/femtogen/: README.md  __init__.py  csplot.py  femtogen.py  test_femtogen.py
femtonet/femtonet_api/: __init__.py  femtoapi.py
femtonet/generator/: csplot.py  femtogen.py
femtonet/gpd/: fut.py  gauss.py  gluon_ff.py  gpd.py  kelly.py  run_gpd.py
femtonet/prototype/: __init__.py  evolve.py  integro_differential.py
femtonet/visualization/: __init__.py  plotting.py
(+99 files in other folders)
