[build-system]
requires = [
	 "setuptools>=61.0",
	 "wheel",
	 ]
build-backend = "setuptools.build_meta"

[project]
name="femtonet"
version="0.0.5"
authors=[
	{name="Joshua Hoskins", email="jrh4dy@gmail.com"}
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/uva-femtography/femtonet"
"Bug Tracker" = "https://github.com/uva-femtography/femtonet/issues"