[metadata]
name = femtonet
version = 0.0.5
author = Joshua Hoskins
author_email = jrh4dy@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uva-femtography/femtonet
project_urls =
    Bug Tracker = https://github.com/uva-femtography/femtonet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
		 matplotlib
		 numpy
		 pandas
		 scipy
		 tqdm
		 aiohttp
		 nest-asyncio